[gd_scene load_steps=6 format=3 uid="uid://hr41fkindfuj"]

[ext_resource type="Script" path="res://scripts/screens/title.gd" id="1_m6u6w"]
[ext_resource type="Texture2D" uid="uid://cl7q8s1ygc8an" path="res://art/ui/logo.png" id="1_r3xtq"]
[ext_resource type="Theme" uid="uid://ceoxr5e0y42y5" path="res://themes/menu-buttons.tres" id="2_d8iyl"]
[ext_resource type="Theme" uid="uid://bv6xaxgvlwc1i" path="res://themes/theme.tres" id="3_cvf31"]
[ext_resource type="AudioStream" uid="uid://4f6v8x01jgmj" path="res://sound/bf-vs-music.ogg" id="5_ru7pm"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_m6u6w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(320, 96)
texture = ExtResource("1_r3xtq")

[node name="ArenaButton" type="Button" parent="."]
offset_left = 224.0
offset_top = 200.0
offset_right = 416.0
offset_bottom = 231.0
theme = ExtResource("2_d8iyl")
text = "ARENA"

[node name="BalloonTripButton" type="Button" parent="."]
offset_left = 224.0
offset_top = 248.0
offset_right = 416.0
offset_bottom = 279.0
theme = ExtResource("2_d8iyl")
text = "BALLOON TRIP"

[node name="Version" type="Label" parent="."]
offset_left = 556.0
offset_top = 4.0
offset_right = 637.0
offset_bottom = 15.0
theme = ExtResource("3_cvf31")
theme_override_colors/font_color = Color(0.164706, 0.164706, 0.164706, 1)
text = "V0.0.0"
horizontal_alignment = 2

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ru7pm")
volume_db = -6.789

[connection signal="pressed" from="ArenaButton" to="." method="_on_arena_button_pressed"]
[connection signal="pressed" from="BalloonTripButton" to="." method="_on_balloon_trip_button_pressed"]
